<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/save" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_edit_text"
        android:gravity="top"
        android:textSize="16sp"
        android:hint="@string/task_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLines="5"
        android:minLines="2"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/priority" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        tools:listitem="@layout/piority_type_row" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="#30000000" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/create_before" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/padd_10" />

    </FrameLayout>

    <TextView
        android:id="@+id/text_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        tools:text="27.06.2021" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#30000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_btn"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_delete_gray"
        android:drawablePadding="@dimen/padd_10"
        android:gravity="center_vertical"
        android:text="@string/delete" />

</LinearLayout>